# wily-rooster

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  Dockerfile  INSTALLATION.md  NOTICE  README.md  ci-local.sh  examples.md  poule  pyproject.toml
claude/: sdd.md
commands/: CLAUDE.md
doc/: neural-training-guide.md
docker/: ensure-claude  entrypoint.sh  poule-mcp  statusline.sh  validate-index.py
examples/: .arith.aux  Makefile  README.md  _CoqProject  algebra.v  automation.v  broken.v  coq-poule-examples.opam  dependent.v  flocq.v  lint_targets.v  obligations.v  test-results.md  typeclasses.v
scripts/: build-indexes.sh  check-latest.sh  nightly-reindex.sh  publish-indexes.sh  publish-release.sh  reindex-cron.sh
specification/: assumption-auditing.md  auto-trace-explanation.md  build-system-integration.md  channel-const-jaccard.md  channel-fts.md  channel-mepo.md  channel-ted.md  channel-wl-kernel.md  cli.md  code-extraction-management.md  coq-normalization.md  coq-proof-backend.md  cse-normalization.md  data-structures.md  deep-dependency-analysis.md  diagram-file-output.md  extraction-campaign.md  extraction-checkpointing.md  extraction-dependency-graph.md  extraction-output.md  extraction-reporting.md  extraction.md  fusion.md  hammer-automation.md  independent-proof-checking.md  literate-documentation.md  mcp-server.md  mermaid-renderer.md  neural-retrieval.md  neural-training.md  nightly-reindex.md  notation-inspection.md  pipeline.md  prebuilt-distribution.md  proof-profiling.md  proof-serialization.md  proof-session.md  storage.md  tactic-documentation.md  type-expr-parser.md  (+3 more)
src/: CLAUDE.md
(+382 files in other folders)
