[project]
name = "poule"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "numpy",
    "alectryon",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
markers = [
    "requires_coq: test requires a real Coq/coq-lsp installation",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poule"]
