opam-version: "2.0"
name: "coq-poule-examples"
version: "0.1.0"
synopsis: "Example Coq files for Poule end-to-end testing"
maintainer: "poule"

depends: [
  "coq" {>= "8.18" & < "10.0"}
  "coq-flocq" {>= "4.0"}
  "coq-hammer" {>= "1.3"}
  "coq-mathcomp-ssreflect" {>= "2.0"}
  "coq-stdpp" {>= "1.10"}
  "coq-coquelicot" {>= "3.4"}
]
